FIX: facebook like/share alignment.

--- a/source/css/_common/components/post/post-meta.styl
+++ b/source/css/_common/components/post/post-meta.styl
@@ -44,6 +44,10 @@
   +mobile() { display: none; }
 }
 
+.fb_iframe_widget {
+  top: -2px;
+}
+
 #vk_like {
   display: inline-block;
   top: 6px;
